# blog_apis

./: .gitignore  Cargo.toml  README.md  Rocket.toml  demo.sh  setup.sh
migrations/2024_01_01_000001_create_users_table/: up.sql
migrations/2024_01_01_000002_create_posts_table/: up.sql
migrations/2024_01_01_000003_create_posts_tags_table/: up.sql
src/: db.rs  handlers.rs  main.rs  models.rs  repository.rs  schema.rs
