[package]
name = "blog_apis"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
